# agentic-amazon-product-assistant

./: .env.example  .gitignore  Dockerfile  Dockerfile.production  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_READY_SUMMARY.md  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  test_system.py
deploy/: production-deploy.sh
docs/: DEPLOYMENT_GUIDE.md  EVALUATIONS.md  LANGSMITH_TRACING_GUIDE.md  PRODUCT_VISION.md  SYNTHETIC_DATA.md
eval/: run_evaluation.py  run_synthetic_evaluation.py
scripts/: production_readiness_validator.py  production_test_suite.py
src/: __init__.py
src/ai_powered_amazon_product_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/api/: main.py  run_server.py
src/chatbot_ui/: enhanced_llm_manager.py  enhanced_streamlit_app.py  llm_manager.py  performance_tracker.py  streamlit_app.py  ui_components.py
src/chatbot_ui/core/: __init__.py  config.py
src/data_processing/: advanced_pipeline.py
src/evaluation/: __init__.py  enhanced_evaluator.py  evaluator.py  scorers.py  synthetic_data_generator.py
src/prompts/: config.yaml  registry.py
src/prompts/templates/: rag_templates.j2
src/rag/: enhanced_query_processor.py  enhanced_vector_db.py  mock_vector_db.py  query_processor.py  structured_generator.py  structured_outputs.py  vector_db_weaviate_simple.py
src/tracing/: __init__.py  business_intelligence.py  enhanced_trace_utils.py  trace_utils.py
src/visualization/: __init__.py  interactive_dashboards.py  streamlit_dashboard_app.py
